--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <br>
 
             <label for="mensaje">
-            <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Descripcion de la mascota:"></textarea>
+                <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Descripcion de la mascota:"></textarea>
             </label>
 
             <br>
             <br>
 
-            <input type="submit" name="enviar" id="enviar"> 
+            <input type="submit" name="enviar" id="enviar" value="Enviar Pedido"> 
 
         </form>
     </main>
